# cmtk_devspace

./: .gitignore  .gitmodules  README.md  cmtk_next.txt  test_build_install_cpp_projects.sh  test_cpp_projects.sh  test_uninstall_cpp_projects.sh
cmtk_tests-cpp_exe/: CMakeLists.txt  (+1 more)
cmtk_tests-cpp_hutil/: CMakeLists.txt  README.md  cmake_quick_install.cmake
cmtk_tests-cpp_hutil/example/: cpp_hutil_example.cpp
cmtk_tests-cpp_hutil/include/cpp_hutil/: cpp_hutil.hpp
cmtk_tests-cpp_hutil/test/: CMakeLists.txt  cpp_compute_odd_tests.cpp  cpp_hutil_tests.cpp
cmtk_tests-cpp_util/example/basic_cmake_project/: CMakeLists.txt
cmtk_tests-cpphutil/example/basic_cmake_project/: CMakeLists.txt
cmtkt-cpputil/: CMakeLists.txt
cmtkt-cpputil/example/: cpputil_example.cpp
cmtkt-cpputil/example/basic_cmake_project/: CMakeLists.txt  main.cpp
cmtkt-cpputil/src/: cpputil.cpp
cmtkt-cpputil/test/: cpputil_tests.cpp
cppexe/: CMakeLists.txt
cppexe/include/cppexe/: cppexe.hpp
cppexe/src/: cppexe.cpp  main.cpp
cpphutil/: CMakeLists.txt  LICENSE.md  README.md  cmake_quick_install.cmake
cpphutil/example/: CMakeLists.txt  cpphutil_example.cpp
cpphutil/example/basic_cmake_project/: CMakeLists.txt  main.cpp
cpphutil/include/cpphutil/: cpphutil.hpp
cpphutil/test/: CMakeLists.txt  cpphutil_tests.cpp
projects/alphabet/alphabet-alphabet/: CMake-package-config.cmake.in  CMakeLists.txt  README.md
projects/alphabet/alphabet-alphabet/alpha/: CMakeLists.txt
projects/alphabet/alphabet-alphabet/alpha/example/: CMakeLists.txt  alpha_example.cpp
projects/alphabet/alphabet-alphabet/alpha/src/: alpha.cpp
projects/alphabet/alphabet-alphabet/alpha/test/: CMakeLists.txt  alpha_project_version_tests.cpp  alpha_tests.cpp
projects/alphabet/alphabet-alphabet/beta/: CMakeLists.txt
projects/alphabet/alphabet-alphabet/beta/example/: CMakeLists.txt  beta_example.cpp
projects/alphabet/alphabet-alphabet/beta/test/: CMakeLists.txt  beta_project_version_tests.cpp  beta_tests.cpp
projects/alphabet/alphabet-alphabet/example/basic_cmake_project/: CMakeLists.txt  main.cpp
projects/alphabet/alphabet-alphabet/include/alphabet/: version.hpp.in
projects/cmtk_tests/cmtk_tests-alphabet/: CMake-package-config.cmake.in  CMakeLists.txt  README.md
projects/cmtk_tests/cmtk_tests-alphabet/alpha/: CMakeLists.txt
projects/cmtk_tests/cmtk_tests-alphabet/alpha/example/: alpha_example.cpp
projects/cmtk_tests/cmtk_tests-alphabet/alpha/src/: alpha.cpp
projects/cmtk_tests/cmtk_tests-alphabet/alpha/test/: CMakeLists.txt  alpha_tests.cpp
projects/cmtk_tests/cmtk_tests-alphabet/beta/: CMakeLists.txt
projects/cmtk_tests/cmtk_tests-alphabet/beta/src/: beta.cpp
projects/cmtk_tests/cmtk_tests-alphabet/beta/test/: CMakeLists.txt  beta_tests.cpp
projects/cmtk_tests/cmtk_tests-alphabet/example/basic_cmake_project/: CMakeLists.txt  main.cpp
projects/cmtk_tests/cmtk_tests-cpp_exe/: CMakeLists.txt  README.md
projects/cmtk_tests/cmtk_tests-cpp_exe/src/: cpp_exe.cpp  main.cpp
projects/cmtk_tests/cmtk_tests-cpp_htool/: CMakeLists.txt
projects/cmtk_tests/cmtk_tests-cpp_htool/example/: CMakeLists.txt  cpp_htool_example.cpp
projects/cmtk_tests/cmtk_tests-cpp_htool/example/basic_cmake_project/: CMakeLists.txt  main.cpp
projects/cmtk_tests/cmtk_tests-cpp_htool/test/: CMakeLists.txt  cpp_compute_even_tests.cpp  cpp_compute_odd_tests.cpp  cpp_htool_tests.cpp
projects/cmtk_tests/cmtk_tests-cpp_hutil/: CMake-package-config.cmake.in  CMakeLists.txt  README.md
projects/cmtk_tests/cmtk_tests-cpp_hutil/example/: CMakeLists.txt  cpp_hutil_example.cpp
projects/cmtk_tests/cmtk_tests-cpp_hutil/example/basic_cmake_project/: CMakeLists.txt  main.cpp
projects/cmtk_tests/cmtk_tests-cpp_hutil/test/: CMakeLists.txt  cpp_compute_even_tests.cpp  cpp_compute_odd_tests.cpp  cpp_hutil_tests.cpp
projects/cmtk_tests/cmtk_tests-cpp_texe/: CMakeLists.txt
projects/cmtk_tests/cmtk_tests-cpp_texe/include/cpp_texe/: cpp_texe.hpp
projects/cmtk_tests/cmtk_tests-cpp_texe/src/: cpp_texe.cpp  cpp_texe_main.cpp  main.cpp
projects/cmtk_tests/cmtk_tests-cpp_texe/test/: CMakeLists.txt  cpp_compute_even_tests.cpp  cpp_compute_mix_tests.cpp  cpp_compute_odd_tests.cpp  cpp_util_tests.cpp
projects/cmtk_tests/cmtk_tests-cpp_util/: CMakeLists.txt  cmake_quick_install.cmake
projects/cmtk_tests/cmtk_tests-cpp_util/example/: CMakeLists.txt
projects/cmtk_tests/cmtk_tests-cpp_util/example/basic_cmake_project/: CMakeLists.txt  main.cpp
projects/cmtk_tests/cmtk_tests-cpp_util/src/: cpp_util.cpp  cpp_util.cpp.in
projects/cmtk_tests/cmtk_tests-cpp_util/test/: CMakeLists.txt  cpp_compute_even_tests.cpp  cpp_compute_odd_tests.cpp  cpp_util_tests.cpp
projects/cmtk_tests/cmtk_tests-cpp_util/test_package/: CMakeLists.txt  main.cpp
projects/cmtk_tests/cmtk_tests-rsc_lib/: CMakeLists.txt
projects/cmtk_tests/cmtk_tests-rsc_lib/example/: CMakeLists.txt  rsc_lib_example.cpp
projects/cmtk_tests/cmtk_tests-rsc_lib/test/: CMakeLists.txt  rsc_lib_tests.cpp
projects/cmtk_tests/cmtk_tests-rsc_lib/test_package/: CMakeLists.txt  main.cpp
projects/cmtk_tests/cmtk_tests_pro-cpp_utility/: CMakeLists.txt
projects/cmtk_tests/cmtk_tests_pro-cpp_utility/example/: cpp_util_example.cpp
projects/cmtk_tests/cmtk_tests_pro-cpp_utility/src/: cpp_util.cpp.in
projects/cmtk_tests/cmtk_tests_pro-cpp_utility/test_package/: CMakeLists.txt
projects/no_namespace/lymerenide/: CMakeLists.txt  README.md
projects/no_namespace/lymerenide/example/: CMakeLists.txt  lymerenide_example.cpp
projects/no_namespace/lymerenide/src/: lymerenide.cpp
projects/no_namespace/lymerenide/test/: CMakeLists.txt  compute_even_tests.cpp  compute_odd_tests.cpp  lymerenide_tests.cpp
projects/no_namespace/lymerenide/test_package/: CMakeLists.txt  main.cpp
projects/no_namespace/resorice/: CMake-package-config.cmake.in  CMakeLists.txt
projects/no_namespace/resorice/example/: CMakeLists.txt  resorice_example.cpp
projects/no_namespace/resorice/test/: CMakeLists.txt  resorice_tests.cpp
projects/no_namespace/resorice/test_package/: CMakeLists.txt  main.cpp
(+50 files in other folders)
