cmake_minimum_required(VERSION 3.23)

include(CMakePrintHelpers)

project(basic_cmake_project)

add_executable(${PROJECT_NAME} main.cpp)
# Find package cpphutil:
find_package(cpphutil 0.1.0 CONFIG REQUIRED)
# Use cpphutil release header only target:
target_link_libraries(${PROJECT_NAME} PRIVATE cmtkt::cpphutil)
# cmake_print_properties(TARGETS cmtkt::cpphutil PROPERTIES INTERFACE_INCLUDE_DIRECTORIES)
